Fix the listen address for the FPM pool.

--- a/silk.conf
+++ b/silk.conf
@@ -25,7 +25,7 @@
         </Directory>
 
         <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
-                SetHandler "proxy:unix:/run/php/silk-fpm.sock|fcgi://localhost"
+                SetHandler "proxy:unix:/run/php/@@USER@@-fpm.sock|fcgi://localhost"
         </FilesMatch>
 
         ErrorLog ${APACHE_LOG_DIR}/@@PROJECT@@-error.log
